Added RTC code. Light and fan now run off the local time instead of the controller's internal timer

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,8 @@ framework = arduino
 lib_deps = 
 	arduino-libraries/LiquidCrystal@^1.0.7
 	adafruit/DHT sensor library@^1.4.3
+	adafruit/Adafruit BusIO@^1.11.3
+	adafruit/RTClib@^2.0.2
 monitor_speed = 9600
 
 [platformio]
